board css: fixed css board overflow in column style

--- a/css/board.css
+++ b/css/board.css
@@ -2,7 +2,7 @@
 /* Firefox */
 * {
     scrollbar-width: thin;
-    scrollbar-color: #878B8F #ffffff;
+    scrollbar-color: #A8A8A8 #ffffff;
 }
 
 /* Chrome, Edge, and Safari */
@@ -15,9 +15,9 @@
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #878B8F;
-    border-radius: 8px;
-    border: 1px solid #ffffff;
+    background-color: #A8A8A8;
+    border-radius: 16px;
+    border: 8px solid #A8A8A8;
 }
 
 .d-none {
